pp2/samples/tested/expressions.decaf.test

*** Error line 16.
  foo(a, d, !true);
       ^
*** syntax error

